src/main/java/com/example/carrie/errors/custom/InternalServerError.java
package com.example.carrie.errors.custom;

public class InternalServerError extends RuntimeException{
    public InternalServerError(String message){
        super(message);
    }
}
